feat: More REST
Initial laundry model and handlers
